--- a/CorsoEnaip2018_Stacks.Test/CorsoEnaip2018_Stacks.Test.csproj
+++ b/CorsoEnaip2018_Stacks.Test/CorsoEnaip2018_Stacks.Test.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CountableStackTest.cs" />
     <Compile Include="ObservableStackTest.cs" />
     <Compile Include="StackTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
