--- a/CorsoEnaip2018_Stacks/CorsoEnaip2018_Stacks.csproj
+++ b/CorsoEnaip2018_Stacks/CorsoEnaip2018_Stacks.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CountableStack.cs" />
     <Compile Include="IStackSubscriber.cs" />
     <Compile Include="ObservableStack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
