--- a/CorsoEnaip2018_Employees/CorsoEnaip2018_Employees.csproj
+++ b/CorsoEnaip2018_Employees/CorsoEnaip2018_Employees.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Employees.cs" />
+    <Compile Include="PayCalculators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
