Employee save to database 3

--- a/CorsoEnaip2018_Employees/CorsoEnaip2018_Employees.csproj
+++ b/CorsoEnaip2018_Employees/CorsoEnaip2018_Employees.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BonusCalculators.cs" />
+    <Compile Include="EmployeeDatabase.cs" />
     <Compile Include="Employees.cs" />
+    <Compile Include="ISaver.cs" />
     <Compile Include="MalusCalculator.cs" />
     <Compile Include="PayCalculators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
