--- a/CorsoEnaip2018_Visitor_Nodes/CorsoEnaip2018_Visitor_Nodes.csproj
+++ b/CorsoEnaip2018_Visitor_Nodes/CorsoEnaip2018_Visitor_Nodes.csproj
@@ -62,6 +62,9 @@
     <Compile Include="TreeNodesTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Visitors\Accumulator.cs" />
+    <Compile Include="Visitors\ILinkedNodeVisitor.cs" />
+    <Compile Include="Visitors\ITreeNodeVisitor.cs" />
+    <Compile Include="Visitors\Multiplier.cs" />
   </ItemGroup>
   <ItemGroup />
   <Choose>
