--- a/CorsoEnaip2018_Cup_2/CorsoEnaip2018_Cup_2.csproj
+++ b/CorsoEnaip2018_Cup_2/CorsoEnaip2018_Cup_2.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{566DFE29-B709-45A6-9413-EDDF414725C8}</ProjectGuid>
+    <ProjectGuid>{1F8272F7-CB3C-43E3-A25D-0F6ECD13329F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CorsoEnaip2018_Cup</RootNamespace>
-    <AssemblyName>CorsoEnaip2018_Cup</AssemblyName>
+    <RootNamespace>CorsoEnaip2018_Cup_2</RootNamespace>
+    <AssemblyName>CorsoEnaip2018_Cup_2</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -36,7 +36,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -51,8 +50,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Cup.cs" />
-    <Compile Include="CupTest.cs" />
+    <Compile Include="Classes.cs" />
+    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Choose>
