CSS - fondamenti - versione 1

--- a/CorsoEnaip2018_MATERIALE/CorsoEnaip2018_MATERIALE.csproj
+++ b/CorsoEnaip2018_MATERIALE/CorsoEnaip2018_MATERIALE.csproj
@@ -51,6 +51,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="CSS - fondamenti.pdf" />
     <None Include="EmployeeTests.playlist" />
     <None Include="provetta 26 gennaio.md" />
     <None Include="web projects - specifiche.docx" />
