--- a/CorsoEnaip2018_SuperHeroes/appsettings.json
+++ b/CorsoEnaip2018_SuperHeroes/appsettings.json
@@ -5,5 +5,5 @@
       "Default": "Warning"
     }
   },
-  "Database": "my-connection-string"
+  "ConnectionString": "Data Source=TRISRV10\\SQLEXPRESS;Database=CorsoEuris_Kraus;Integrated Security=True;"
 }
