--- a/CorsoEnaip2018_MATERIALE/CorsoEnaip2018_MATERIALE.csproj
+++ b/CorsoEnaip2018_MATERIALE/CorsoEnaip2018_MATERIALE.csproj
@@ -55,6 +55,7 @@
     <None Include="Esercizi\provetta 26 gennaio.md" />
     <None Include="web projects - specifiche.docx" />
     <None Include="Security - fundamentals.pdf" />
+    <None Include="CSS - fundamentals.pdf" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="DatabaseCorso.sql" />
