--- a/CorsoEnaip2018_AspNetCoreTest1.Test/CorsoEnaip2018_AspNetCoreTest1.Test.csproj
+++ b/CorsoEnaip2018_AspNetCoreTest1.Test/CorsoEnaip2018_AspNetCoreTest1.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack.CssSelectors.NetCore" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.2.1" />
